RGB ON , OFF 함수 생성, 16개 동시 컨트롤 가능.

--- a/05_ARM_Code_Cube/05_ARM_Code_Cube.ioc
+++ b/05_ARM_Code_Cube/05_ARM_Code_Cube.ioc
@@ -40,34 +40,94 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.3
+PF1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF1.GPIO_PuPd=GPIO_NOPULL
+PF1.GPIO_Speed=GPIO_SPEED_LOW
 PF1.Locked=true
 PF1.Signal=GPIO_Output
+PF10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF10.GPIO_PuPd=GPIO_NOPULL
+PF10.GPIO_Speed=GPIO_SPEED_LOW
 PF10.Locked=true
 PF10.Signal=GPIO_Output
+PF11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF11.GPIO_PuPd=GPIO_NOPULL
+PF11.GPIO_Speed=GPIO_SPEED_LOW
 PF11.Locked=true
 PF11.Signal=GPIO_Output
+PF12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF12.GPIO_PuPd=GPIO_NOPULL
+PF12.GPIO_Speed=GPIO_SPEED_LOW
 PF12.Locked=true
 PF12.Signal=GPIO_Output
+PF13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF13.GPIO_PuPd=GPIO_NOPULL
+PF13.GPIO_Speed=GPIO_SPEED_LOW
 PF13.Locked=true
 PF13.Signal=GPIO_Output
+PF14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF14.GPIO_PuPd=GPIO_NOPULL
+PF14.GPIO_Speed=GPIO_SPEED_LOW
 PF14.Locked=true
 PF14.Signal=GPIO_Output
+PF15.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF15.GPIO_PuPd=GPIO_NOPULL
+PF15.GPIO_Speed=GPIO_SPEED_LOW
 PF15.Locked=true
 PF15.Signal=GPIO_Output
+PF2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF2.GPIO_PuPd=GPIO_NOPULL
+PF2.GPIO_Speed=GPIO_SPEED_LOW
 PF2.Locked=true
 PF2.Signal=GPIO_Output
+PF3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF3.GPIO_PuPd=GPIO_NOPULL
+PF3.GPIO_Speed=GPIO_SPEED_LOW
 PF3.Locked=true
 PF3.Signal=GPIO_Output
+PF4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF4.GPIO_PuPd=GPIO_NOPULL
+PF4.GPIO_Speed=GPIO_SPEED_LOW
 PF4.Locked=true
 PF4.Signal=GPIO_Output
+PF5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF5.GPIO_PuPd=GPIO_NOPULL
+PF5.GPIO_Speed=GPIO_SPEED_LOW
 PF5.Locked=true
 PF5.Signal=GPIO_Output
+PF6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF6.GPIO_PuPd=GPIO_NOPULL
+PF6.GPIO_Speed=GPIO_SPEED_LOW
 PF6.Locked=true
 PF6.Signal=GPIO_Output
+PF7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF7.GPIO_PuPd=GPIO_NOPULL
+PF7.GPIO_Speed=GPIO_SPEED_LOW
 PF7.Locked=true
 PF7.Signal=GPIO_Output
+PF8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF8.GPIO_PuPd=GPIO_NOPULL
+PF8.GPIO_Speed=GPIO_SPEED_LOW
 PF8.Locked=true
 PF8.Signal=GPIO_Output
+PF9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF9.GPIO_PuPd=GPIO_NOPULL
+PF9.GPIO_Speed=GPIO_SPEED_LOW
 PF9.Locked=true
 PF9.Signal=GPIO_Output
 PH0/OSC_IN.Locked=true
